# ia-generativa

./: .gitignore  asklib.py  main.py  makefile  pyproject.toml
app/: main.py  settings.py  storage.py
rag/: .env.example  .gitignore  README.md  makefile  pyproject.toml
rag/app/: asklib.py
rag/notebooks/: debug.ipynb
trabalho-final-ia/: 0_draft.ipynb  1_pre-processing.ipynb  3_chatbot.ipynb  README.md  preprocessed_data.csv  pyproject.toml
trabalho-final-ia/dataset/: bitrate_test.csv  bitrate_train.csv  rtt_test.csv  rtt_train.csv
