[tool.poetry]
name = "trabalho-final-ia"
version = "0.1.0"
description = ""
authors = ["Rafael Figueiredo <rafael.figueiredo91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
